2011-06-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[scheme] Use ‘cons*’, not ‘list*’.

	Apparently, ‘list*’ is not cool enough for some Guile versions.

	* postgres-gxrepl.scm (defcc): Use ‘cons*’, not ‘list*’.

2011-05-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Don't clobber Makefile "user vars" ‘CPPFLAGS’, ‘LDFLAGS’.

	* Makefile.am (AM_CPPFLAGS, AM_LDFLAGS): New vars.
	(postgres_la_LDFLAGS): Add $(AM_LDFLAGS).
	(snarfcppopts): Add $(AM_CPPFLAGS).

2011-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] Decruft: Don't bother with ‘scm_gc_protect_object’.

	* gi.h (scm_protect_object): Delete #define.

2011-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] Use ‘AC_CHECK_DECLS’ for ‘scm_terminating’.

	* libpq.c: Throughout, replace ‘defined HAVE_SCM_TERMINATING’
	with ‘HAVE_DECL_SCM_TERMINATING’.

2011-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq int] Use ‘__func__’ more.

	* libpq.c (lob_fill_input, lob_write): Use ‘__func__’.

2011-05-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] Specify ‘ACLOCAL_AMFLAGS’ in Makefile.am.

	* Makefile.am (ACLOCAL_AMFLAGS): New var.

2011-05-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build install] Installed punified Scheme, sans ".scm" extension.

	* Makefile.am (d_DATA, stamp-all): Do s/schemesource/schemestems/.
	(SUFFIXES): New var.
	(.scm): New old-style suffix rule.
	(install-data-hook): Check for "foo.scm" in $(ddir); emit warning.
	(CLEANFILES): Add $(schemestems).

2011-05-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Make partial install depend on ../src "make all".

	Omission from 2011-05-14, "Do a partial
	install under test/; point ‘%load-path’ there".

	* Makefile.am (stamp-all): New target.
	(noinst_DATA): New var.
	[MAINTAINER_MODE] (noinst_DATA): Change ‘=’ to ‘+=’.
	(CLEANFILES): Add stamp-all.

2011-05-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[uninstall] Fix bug: Make sure everything is properly deleted.

	* Makefile.am (update-libsite-module-catalog): New target.