@@ -99,6 +99,17 @@ scm_init_ ## fname_frag ## _module (void)                               \
 #define ASSERT(what,expr,msg)  SCM_ASSERT ((expr), what, msg, FUNC_NAME)
 #define ASSERT_STRING(n,arg)  ASSERT (arg, SCM_STRINGP (arg), SCM_ARG ## n)
 
+/* These are provisionary.  We need a better way for Guile 2.x.  */
+#ifndef SCM_ROCHARS
+#define SCM_ROCHARS(x)   SCM_CHARS (x)
+#endif
+#ifndef SCM_ROLENGTH
+#define SCM_ROLENGTH(x)  SCM_LENGTH (x)
+#endif
+#ifndef SCM_ROUCHARS
+#define SCM_ROUCHARS(x)  ((unsigned char *) SCM_ROCHARS (x))
+#endif
+
 /* Coerce a string that is to be used in contexts where the extracted C
    string is expected to be zero-terminated and is read-only.  We check
    this condition precisely instead of simply coercing all substrings,
