@@ -1,5 +1,13 @@
 2011-06-02  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[int] If necessary, #define SCM_{ROCHARS,ROLENGTH,ROUCHARS}.
+
+	* gi.h [!SCM_ROCHARS] (SCM_ROCHARS): New #define.
+	[!SCM_ROLENGTH] (SCM_ROLENGTH): Likewise.
+	[!SCM_ROUCHARS] (SCM_ROUCHARS): Likewise.
+
+2011-06-02  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[scheme] Use ‘cons*’, not ‘list*’.
 
 	Apparently, ‘list*’ is not cool enough for some Guile versions.
